<resources>
    <string name="app_name">Travial</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">
        Location permissions are needed for registering locations in order to unlock the trivias
    </string>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="room_db_name">app-db</string>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="placeholder_user_name">Android Studio</string>
    <string name="placeholder_user_email">android.studio@android.com</string>
    <string name="placeholder_user_desc">User profile</string>

    <string name="cv_question_tag">rv-question</string>
    <string name="rg_answers_tag">rg-answers</string>

    <string name="welcome">"Welcome! "</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="goodbye">Successfully logged out. Goodbye!</string>

    <string name="nav_main_title">Main screen</string>
    <string name="nav_tutorial_title">How to play</string>
    <string name="nav_results_title">My results</string>
    <string name="nav_rankings_title">Rankings</string>
    <string name="nav_premium_title">Premium</string>
    <string name="nav_share_title">Share</string>
    <string name="nav_logout_title">Logout</string>

    <string name="trivia_result_message_passed">Congratulations!!!</string>
    <string name="trivia_result_message_failed">Sorry :( Try again!</string>
    <string name="trivia_result_passed">PASSED</string>
    <string name="trivia_result_failed">FAILED</string>
    <string name="trivia_result_back_btn_text">Back to trivias</string>
    <string name="trivia_result_list_btn_text">List of results</string>
    
    <string name="cc_attrib_license_html">
        <![CDATA[
            <a href="https://creativecommons.org/licenses/by/4.0">
                Creative Commons Attribution 4.0 License
            </a>
        ]]>
    </string>

    <!-- Log tags -->

    <string name="room_db_log">room-db-logs</string>
    <string name="user_auth_log">user-auth-logs</string>
    <string name="trivia_list_log">trivia-list-logs</string>
    <string name="trivia_results_log">trivia-results-logs</string>
    <string name="google_maps_log">google-maps-logs</string>
    <string name="tutorial_title">HOW TO PLAY</string>
    <string name="tutorial_step1">First, you have to visit one of the available Points of Interest (POIs). When you are there, you can tap on \'Check in POI\' to unlock it.</string>
    <string name="tutorial_step2">After that, all trivias related to that POI will appear if you tap the \'Play\' button.</string>
    <string name="tutorial_step3">You can choose the trivia that you prefer and start testing your knowledge. Later on, you can check your previous scores in \'My results\', and compare them with your friends and other people in \'Rankings\'.</string>
</resources>
