<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- TODO: Separate menu items in groups/menus? -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_tutorial_title" />
        <item
            android:id="@+id/nav_results"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_results_title" />
        <item
            android:id="@+id/nav_rankings"
            android:icon="@android:drawable/arrow_up_float"
            android:title="@string/nav_rankings_title" />
        <item
            android:id="@+id/nav_premium"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/nav_premium_title" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_share_title" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/nav_logout_title" />
    </group>
</menu>